# FileFinder

./: .gitignore  CMakeLists.txt  Makefile
cmd/: CMakeLists.txt  Makefile
cmd/ArgsParser/: CMakeLists.txt  Makefile
cmd/ArgsParser/include/: argsparser.hpp
cmd/ArgsParser/src/: argsparser.cpp
cmd/ArgsParser/src/MSVC/: dllmain.cpp
cmd/FileFinder/: CMakeLists.txt  Makefile
cmd/FileFinder/include/: filefinder.hpp
cmd/FileFinder/src/: filefinder.cpp
cmd/termcolor/: Makefile
funcs/: CMakeLists.txt  Makefile
funcs/include/: funcs.hpp
funcs/src/: funcs.cpp
gui/: CMakeLists.txt  Makefile
gui/MSVC/: CMakeLists.txt
gui/MSVC/include/: filefinder.hpp
gui/MSVC/res/: filefinder.rc  rc.h
gui/MSVC/src/: filefinder.cpp
